fixed pc page and made adjustments on mobile page

--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -15,6 +15,7 @@
         align-items: center;
         justify-content: flex-end;
         margin-right:90px;
+        font-style: italic;
     }
     
     .address{
@@ -48,6 +49,9 @@
        height: inherit; 
     }
 
-
+    .footer-link{
+        color:white;
+        font-weight: bold;
+    }
     
 }
