--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -45,16 +45,16 @@
   display: flex;
   width: 100%;
   //height: 800px;
-  .st1{
-    color:black;
+  .st1 {
+    color: black;
   }
 
-  .szobor{
-    position:inherit;
-    display:flex;
-    left:100px;
-    width:50%;
-    height:100%;
+  .szobor {
+    position: inherit;
+    display: flex;
+    left: 100px;
+    width: 50%;
+    height: 100%;
     animation: 1s ease-out 0s 1 slideInFromLeft;
   }
 
@@ -66,7 +66,6 @@
     width: 35%;
     height: 35%;
     animation: 1s ease-out 0s 1 slideInFromRight;
-    
   }
 }
 
@@ -128,7 +127,6 @@
   height: 50px;
 }
 
-
 .galery {
   //display:flex;
   position: inherit;
@@ -145,30 +143,27 @@
     justify-content: center;
     margin: 0 auto;
     align-content: center;
-    
   }
 
   .inpicture {
     display: flex;
     //position:absolute;
-    left:500px;
+    left: 500px;
     //margin:0 auto;
 
-    .inin{
+    .inin {
       position: relative;
-      left:135px;
-      top:100px;
+      left: 135px;
+      top: 100px;
     }
   }
-  
 }
-
 
 .about {
   display: flex;
   position: inherit;
   width: 100%;
-  height: 750px;
+  height: 550px;
   background-image: url("../../assets/caciki_sorminta.svg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -176,58 +171,64 @@
 
   .items {
     position: inherit;
-    width: 70%;
-    display: flex;
-    justify-content: space-around;
-    margin: 10px auto;
-
-    
+    display: block;
+    margin: 0px auto;
+    height: 400px;
+    width: 80%;
 
     .maps1 {
       border-radius: 50px;
       border: 1px;
-      margin-right: 150px;
-      height: 170%;
-      width: 60%;
+      height: 100%;
+      width: 50%;
     }
 
-    .pic1 {
-      display: flex;
-      position: inherit;
-      width: 60%;
-      height: 50%;
+    .opens {
+      float:right;
 
-    }
-
-    .opening {
-      width: 65%;
-      height: 85%;    
-    }
-
-    .buttons-site {
-      display: flex;
-      //width:200px;
-
-      .insta {
-        height: 40px;
-        width: 40px;
-        float: left;
-        //margin-left:10px;
-        margin-right: 15px;
-      }
-      
-      .fb2:hover{
-        fill:#184fd6
+      .pic1 {
+        display: flex;
+        position: inherit;
+        width: 60%;
+        //height: 50%;
       }
 
-      .facebook {
-        height: 40px;
-        width: 40px;
-        float: right;
+      .opening {
+        display: contents;
+
+        .opening2 {
+          width: 50%;
+          height: 120px;
+        }
+
+        .opening3 {
+          width: 50%;
+          height: 120px;
+        }
+      }
+
+      .buttons-site {
+        display: flex;
+        //width:200px;
+
+        .insta {
+          height: 40px;
+          width: 40px;
+          float: left;
+          //margin-left:10px;
+          margin-right: 15px;
+        }
+
+        .fb2:hover {
+          fill: #184fd6;
+        }
+
+        .facebook {
+          height: 40px;
+          width: 40px;
+          float: right;
+        }
       }
     }
   }
-
-
- 
 }
